test/should-fail/变量类型未定义-2.j
function test takes nothing returns nothing
    local loli a
endfunction